fixed sidebar z-index to be above everything

--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -1,6 +1,4 @@
 .sign-up-form {
 	place-items: center;
 	margin: 20px;
-	position: relative;
-	z-index: -2;
 }
